--- a/src/main/resources/com/lazyzxsoftware/zxspectrumide/themes/deep-ocean.css
+++ b/src/main/resources/com/lazyzxsoftware/zxspectrumide/themes/deep-ocean.css
@@ -68,7 +68,7 @@
     -fx-background-radius: 3px;
     -fx-text-fill: #B0BEC5;
     -fx-padding: 5 15 5 15;
-    -fx-min-width: -fx-pref-width;
+    -fx-min-width: 30px;
 }
 
 .button:hover {
